# datascore

./: README.md  pyproject.toml  test_run.py
.github/workflows/: ci.yml
src/datascore/: __init__.py  reporter.py  score.py
src/datascore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/datascore/checks/: completeness.py  distribution.py  integrity.py  ml_readiness.py
tests/: test_completeness.py  test_integrity.py  test_score.py
